--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "@aposin/ng-aquila": "^15.0.0",
+    "@ngrx/effects": "^15.1.0",
     "@ngrx/store": "^15.1.0",
     "i18n-iso-countries": "^6.8.0",
     "iban": "^0.0.14",
