--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@aposin/ng-aquila": "^15.0.0",
     "@ngrx/effects": "^15.1.0",
     "@ngrx/store": "^15.1.0",
+    "@ngrx/store-devtools": "15.1.0",
     "i18n-iso-countries": "^6.8.0",
     "iban": "^0.0.14",
     "moment": "^2.29.1",
